Ladder 클래스에서 상수가 상수의 역할을 할 수 있도록 수정